--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -16,7 +16,7 @@ if logged_in?
     
     add_tab({:html => {:id => (@current_project.nil? ? nil : 'projects_tab'), 
 	                   :li_end => (@current_project.nil? ? nil : 
-	                               projects_tab_list(current_user.projects))}
+	                               projects_tab_list(current_user.projects.unarchived))}
 	}) do |t|
       t.named "#{t('.all_projects')}"
       t.links_to projects_path
