--- a/app/views/projects/fields/_ownership.haml
+++ b/app/views/projects/fields/_ownership.haml
@@ -1,4 +1,4 @@
 .owner
-  = f.label :name, t('projects.fields.owner')
+  = f.label :user_id, t('projects.fields.owner')
   = f.select :user_id, options_for_owner(@current_project.people)	
   .description= t('projects.fields.owner_description')
