--- a/app/views/invitations/_recent.haml
+++ b/app/views/invitations/_recent.haml
@@ -1,6 +1,6 @@
 .invite_recent
   - for user in recent_users
-    .invite_user_link
+    .invite_user_link{:id => invitation_id(:item,project,user)}
       = micro_avatar(user)
       = invite_user(project,user)
   .clear
