--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -14,9 +14,8 @@ if logged_in?
       end
     end
     
-    add_tab({:html => {:id => (@current_project.nil? ? nil : 'projects_tab'), 
-	                   :li_end => (@current_project.nil? ? nil : 
-	                               projects_tab_list(current_user.projects.unarchived))}
+    add_tab({:html => {:id => 'projects_tab', 
+	                   :li_end => projects_tab_list(current_user.projects.unarchived)}
 	}) do |t|
       t.named "#{t('.all_projects')}"
       t.links_to projects_path
