--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,6 +21,7 @@
     = strip(@current_project)
     .container
       = render 'shared/header'
+      = search_bar
       = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
         = project_navigation(@current_project)
