Comment cache problem

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,11 +1,11 @@
-- cache "#{@current_user.language}_comment_#{comment.id}" do
-  .comment{:id => "comment_#{comment.id}" }
-    .info
-      = #comment_actions_link(comment)
-      = thumb_avatar(comment.user)
-    .block
-      .date
-        = posted_date comment.created_at
+.comment{:id => "comment_#{comment.id}" }
+  .info
+    = #comment_actions_link(comment)
+    = thumb_avatar(comment.user)
+  .block
+    .date
+      = posted_date comment.created_at
+    - cache "part_#{@current_user.language}_comment_#{comment.id}" do
       .name
         = conversation_last_comment_text(comment)
         = activity_comment_user_link(comment)
@@ -21,4 +21,4 @@
         - else
           .upload_list
             = list_uploads_inline(comment.uploads)
-    .clear
+  .clear
