--- a/app/views/projects/fields/_new.haml
+++ b/app/views/projects/fields/_new.haml
@@ -9,5 +9,5 @@
   = f.text_field :permalink
   = tooltip 'project_permalink', t('projects.fields.permalink_description')
   .preview
-    ="#{t('projects.fields.permalink_prefix', :domain => APP_CONFIG['app_domain'])}<span id='handle'></span>" 
+    = host_with_protocol + projects_path + "/<span id='handle'></span>" 
   = watch_permalink_example
