--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -7,6 +7,7 @@ e:compact
 @import footer.sass
 @import forms.sass
 @import flash_box.sass
+@import facebox.sass
 @import primers.sass
 
 @import projects/default.sass
