--- a/public/stylesheets/sass/facebox.sass
+++ b/public/stylesheets/sass/facebox.sass
@@ -65,10 +65,6 @@
     :display block
     :width 30px
     :height 30px
-  .download
-    :width 40px
-    :height 30px
-    :background-color #fff
   .navigation 
     .counter
       :background #000
@@ -109,6 +105,7 @@
     :padding 0
     :margin 0
     :width 90%
+    :cursor pointer
     img
       :vertical-align middle
   .tl, .tr, .bl, .br
