Resend&Reject links no longer visible to non-admin users

--- a/app/views/invitations/_invitation.haml
+++ b/app/views/invitations/_invitation.haml
@@ -10,8 +10,9 @@
     = t('.pending')
     = t('.time_ago', :time_ago_in_words => time_ago_in_words(invitation.updated_at))
   .links
-    = resend_invitation_link(project,invitation)
-    = loading('resend_invitation',invitation.id)
-    = t('common.or')
-    %span.discard= delete_invitation_link(invitation)
+    - if invitation.editable?(current_user)
+      = resend_invitation_link(project,invitation)
+      = loading('resend_invitation',invitation.id)
+      = t('common.or')
+      %span.discard= delete_invitation_link(invitation)
   .clear
