Reposition facebox in DOM and handle error case

--- a/app/views/shared/_facebox.haml
+++ b/app/views/shared/_facebox.haml
@@ -10,6 +10,7 @@
           %td.w
           %td.body
             .footer
+              .download= t('uploads.upload.download')
             %a.close{:href => '#', :alt => t('common.close')}
             .content
           %td.e
