--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -39,3 +39,11 @@
     :overflow auto
     :padding 5px 10px
     :width 540px    
+  table
+    :font-size 12px
+    :border 1px solid #bbb
+    th, td
+      :padding 4px
+      :border 1px solid #ddd
+    th
+      :font-weight bold
