--- a/app/views/emailer/_tasks_for_daily_reminder.haml
+++ b/app/views/emailer/_tasks_for_daily_reminder.haml
@@ -3,4 +3,4 @@
 %ul{ :style => email_text(:normal) }
   - tasks.each do |task|
     %li
-      = link_to task.name, user_task_list_task_url(:user_id => user, :task_list_id => task.task_list, :id => task)
+      = link_to task.name, project_task_list_task_path(task.project, task.task_list, task)
