--- a/app/views/emailer/daily_task_reminder.haml
+++ b/app/views/emailer/daily_task_reminder.haml
@@ -1,9 +1,9 @@
 .email{ :style => email_global }
 
-  = answer_instructions
-
   = tasks_for_daily_reminder(@tasks[:late], @user, I18n.t('users.daily_task_reminder_email.late_tasks'))
   = tasks_for_daily_reminder(@tasks[:today], @user, I18n.t('users.daily_task_reminder_email.tasks_for_today'))
   = tasks_for_daily_reminder(@tasks[:tomorrow], @user, I18n.t('users.daily_task_reminder_email.tasks_for_tomorrow'))
   = tasks_for_daily_reminder(@tasks[:for_next_two_weeks], @user, I18n.t('users.daily_task_reminder_email.tasks_for_next_two_weeks'))
   = tasks_for_daily_reminder(@tasks[:no_due_date], @user, I18n.t('users.daily_task_reminder_email.tasks_without_a_due_date'))
+
+  = I18n.t("users.daily_task_reminder_email.disable_this_reminder", :link => link_to(I18n.t("users.daily_task_reminder_email.settings_page"), account_notifications_url))
