Correct time used when people leave the project

--- a/app/views/activities/_delete_person.haml
+++ b/app/views/activities/_delete_person.haml
@@ -11,5 +11,5 @@
       = t(".by")
       = link_to activity.user, user_path(activity.user)
   .date
-    = posted_date activity.posted_date
+    = posted_date activity.deleted_date
   .clear
