--- a/app/views/activities/_delete_person.m.haml
+++ b/app/views/activities/_delete_person.m.haml
@@ -1,7 +1,7 @@
 .activity
   = thumb_avatar(person.user, false)
   .container
-    .date= posted_date activity.posted_date
+    .date= posted_date activity.deleted_date
     %span.user= person.user.name
     = t(".#{activity.action_type}") # was removed from the project
     = link_to activity.project, activity.project
