--- a/app/views/emailer/daily_task_reminder.haml
+++ b/app/views/emailer/daily_task_reminder.haml
@@ -7,8 +7,5 @@
   = tasks_for_daily_reminder(@tasks[:for_next_two_weeks], @user, I18n.t('users.daily_task_reminder_email.tasks_for_next_two_weeks'))
   = tasks_for_daily_reminder(@tasks[:no_due_date], @user, I18n.t('users.daily_task_reminder_email.tasks_without_a_due_date'))
 
-  = I18n.t("users.daily_task_reminder_email.disable_this_reminder", :link => link_to(I18n.t("users.daily_task_reminder_email.settings_page"), account_notifications_url))
-
 .footer{ :style => email_text(:small) }
-  %p= I18n.t('emailer.confirm.report_abuse', :email => @user.email)
-  %p= I18n.t('emailer.confirm.problems', :support => APP_CONFIG['support'])
+  %p= I18n.t("users.daily_task_reminder_email.you_receive_this_message", :link => link_to(I18n.t("users.daily_task_reminder_email.settings_page"), account_notifications_url))
