Using root_path instead of '/'

--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -27,5 +27,5 @@
     = yield
   
   #footer
-    =# link_to "Use full Teambox", '/'
+    =# link_to "Use full Teambox", root_path
     = link_to "Log out", logout_path
