--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -7,25 +7,11 @@
 
 %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
   #header
-    #topbar
-      %table{ :width => '100%' }
-        %tr
-          %td
-            %h1= link_to image_tag('/images/header_logo_white.png'), activities_path
-          %td{ :style => 'text-align: right' }
-            %small
-              Signed in as
-              = current_user
-    #menubar
-      = link_to "Overview", activities_path, :class => (controller.controller_name == 'activities' ? 'selected' : '')
-      = link_to "My projects", projects_path, :class => (controller.controller_name == 'projects' && !@current_project ? 'selected' : '')
-      - if @current_project
-        = link_to @current_project, projects_path, :class => (controller.controller_name == 'projects' ? 'selected' : '')
-      = #link_to "My tasks"
-
+    = header
+    = navigation(@current_project,current_user.projects,current_user.recent_projects)
   #content
+    = project_navigation(@current_project) if @current_project
     = yield
-  
   #footer
     =# link_to "Use full Teambox", root_path
     = link_to "Log out", logout_path
