--- a/app/views/projects/index.m.haml
+++ b/app/views/projects/index.m.haml
@@ -6,6 +6,6 @@
     - if @sub_action == 'archived'
       .project
         = link_to "Show Active Projects", projects_path, :style => 'color: #999'
-    - else
+    - elsif @archived_projects.any?
       .project
         = link_to "Show #{@archived_projects.size} Archived Projects", project_archived_path, :style => 'color: #999'
