--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -1,7 +1,8 @@
 = banner(@events,@chart)
 
 - content_for :column do
-  = task_list_column(@current_project,@task_lists,@sub_action,@task_list)
+  - if @current_project
+    = task_list_column(@current_project,@task_lists,@sub_action,@task_list)
 
 - if @task_lists.any?
   = tabular_task_lists(@current_project,@task_lists,@sub_action)
