--- a/public/stylesheets/sass/calendar_date_select.sass
+++ b/public/stylesheets/sass/calendar_date_select.sass
@@ -88,11 +88,11 @@
 
 .pick_date
   label
-    :display inline
-    :padding-left 10px
+    :display block
     :font-size 12px
+    :margin-bottom 10px
   .date_picker
-    :display inline
+    :display block
     input
       :border 0
       :background transparent
