--- a/public/stylesheets/sass/calendar_date_select.sass
+++ b/public/stylesheets/sass/calendar_date_select.sass
@@ -90,7 +90,7 @@
   label
     :display block
     :font-size 12px
-    :margin-bottom 10px
+    :margin 10px 0 7px 0
   .date_picker
     :display block
     input
