--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -1,3 +1,9 @@
+.index_task_lists
+  h2
+    :padding-left 20px
+  table.task_list td.status
+    :padding-left 20px
+
 table.task_list
   :width 100%
   :margin-bottom 20px
@@ -83,7 +89,6 @@ table.task_list
     tr.overdue
       td
         :background rgb(255,240,240)
-        :border-bottom solid 1px rgb(240,230,230)
       td.name
         a
           :color rgb(200,0,0)
