Calendars for tasks
Calendar for all projects and for each project.
Requires gem 'icalendar'. Uses ICAL 2.0 format.

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -6,6 +6,7 @@
     = list_archived_projects(@archived_projects)
 
   = subscribe_to_projects_link
+  = subscribe_to_calendars_link
   = #print_projects_link
 
 - if @pending_projects.any?
