--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -8,4 +8,5 @@
 / = comments_settings
 / = reorder_task_list_link(project,task_lists)
 
+= subscribe_to_calendar_link(project)
 = print_task_lists_link(project)
