--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -26,6 +26,7 @@
     .tip
       = t('.tip')
   = subscribe_to_project_link(@current_project)
+  = subscribe_to_calendar_link(@current_project)
   = #print_project_link(@current_project)
 
 /   = javascript_tag "FancyZoomBox.directory = 'http://localhost:3000/images/zoom';" 
