--- a/app/views/task_lists/_tasks_for_all_projects.haml
+++ b/app/views/task_lists/_tasks_for_all_projects.haml
@@ -7,7 +7,9 @@
         %td.name{ :class => "task_item_#{task.status_name}"}
           %span.status
             = localized_status_name(task)
-          = link_to task.project
+          = link_to task.project, project_path(task.project)
+          &rarr;
+          = link_to task.task_list, project_task_list_path(task.project,task.task_list)
           &rarr;
           = link_to task.name, project_task_list_task_path(task.project,task.task_list,task), :class => 'name'
           - unless (task.due_on.nil? && task.unassigned?) || task.closed?
