--- a/public/stylesheets/sass/projects/default.sass
+++ b/public/stylesheets/sass/projects/default.sass
@@ -44,9 +44,16 @@
       :font-size 12px
       :padding-left 25px
       :background url(/images/feed.png) no-repeat left
-      
+
+  .calendars
+    :margin-top 5px
+    a
+      :font-size 12px
+      :padding-left 25px
+      :background url(/images/calendar_date_select/calendar.gif) no-repeat left
+
   .print
-    :margin-top 15px
+    :margin-top 5px
     a
       :font-size 12px
       :padding-left 25px
