--- a/public/stylesheets/sass/users/default.sass
+++ b/public/stylesheets/sass/users/default.sass
@@ -1,7 +1,7 @@
 .new_user
   :padding 10px
 
-.new_users
+.new_users, .create_users
   h2
     :display block
     :margin
@@ -17,6 +17,9 @@
     :border 1px rgb(220,220,150) solid
     :background-color rgb(255,255,200)
     :font-size 12px
+
+.log_into_your_account
+  :color red
 
 .show_users
   .comment, .upload
