--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -2,10 +2,15 @@
 
 %h2= t('.title')
 
-%p= t('.existing_user', :login_url => login_path, :forgot_url => forgot_password_path)
+- if !@invitation and @user.email and User.find_by_email(@user.email)
+  %p{ :style => 'margin: 80px 10px; padding: 10px; border: 1px rgb(220,220,150) solid; background-color: rgb(255,255,200)' }
+    = t('.you_already_have_an_account', :email => @user.email, :login_link => login_path, :reset_password_link => forgot_password_path)
 
-- form_for @user do |f|
-  = user_fields(f, @user, :invite => @invite)
-  %br
-  .submit
-    = submit_tag t('.submit'), :tabindex => 300
+- else
+  %p= t('.existing_user', :login_url => login_path, :forgot_url => forgot_password_path)
+
+  - form_for @user do |f|
+    = user_fields(f, @user, :invite => @invite)
+    %br
+    .submit
+      = submit_tag t('.submit'), :tabindex => 300
